qfsmdir = $(prefix)
qfsmdt32appsdir= $(datadir)/icons/hicolor/32x32/apps
qfsmdt32mimedir= $(datadir)/icons/hicolor/32x32/mimetypes
qfsmdt48appsdir= $(datadir)/icons/hicolor/48x48/apps
qfsmdt48mimedir= $(datadir)/icons/hicolor/48x48/mimetypes
qfsmdt64appsdir= $(datadir)/icons/hicolor/64x64/apps
qfsmdt64mimedir= $(datadir)/icons/hicolor/64x64/mimetypes
qfsmdtdir=$(datadir)/applications
qfsmmimedir=$(datadir)/mimelnk/application

EXTRA_DIST = 32x32 48x48 64x64 qfsm.desktop x-qfsm.desktop x-qfsm.xml

qfsmdt32apps_DATA = 32x32/apps/qfsm.png
qfsmdt32mime_DATA = 32x32/mimetypes/x-qfsm.png
qfsmdt48apps_DATA = 48x48/apps/qfsm.png
qfsmdt48mime_DATA = 48x48/mimetypes/x-qfsm.png
qfsmdt64apps_DATA = 64x64/apps/qfsm.png
qfsmdt64mime_DATA = 64x64/mimetypes/x-qfsm.png

qfsmdt_DATA = qfsm.desktop 
qfsmmime_DATA = x-qfsm.desktop 

